Fix issues related to checkstyle enforcement on openflow-impl module
This is the last commit. It enforces the checkstyle level to error.

Change-Id: I954f0cbabd68134254e3a05216d6f6f126e33d37
Signed-off-by: David Suarez <david.suarez.fuentes@gmail.com>